# portuguese-politics

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  clock.py  cronjob.py  data_initiatives_votes.pkl  docker-compose.yml  example.env  fly.toml  pyproject.toml  test.ipynb  utils.py  worker.py
AzureFunctions/: Makefile  host.json  pyproject.toml  requirements.txt
AzureFunctions/PortuguesePoliticsDailyUpdate/: function.json  readme.md
AzureFunctions/PortuguesePoliticsDailyUpdate/src/: main.py
app/: main.py
app/apis/: schemas.py  votes.py
cron/: daily_updater
daily_updater/: Dockerfile  crontab  fly.toml
elections/: extract.py
parliament/: extract.py
src/app/: config.py  main.py
src/app/apis/: schemas.py
src/app/config/: app.py
src/app/middleware/: exception_handler.py
src/app/parliament/: common.py  temp_constants.py
src/app/parliament/config/: constants.py
src/app/parliament/mapper/: agenda.py  deputy.py  legislature.py
src/app/parliament/model/: agenda.py  deputy.py  legislature.py
src/app/parliament/models/: initiatives.py
src/app/parliament/router/: agenda.py  deputy.py
src/app/parliament/routers/: initiatives.py
src/app/parliament/services/: initiatives.py
src/daily_updater/: common.py  main.py
src/daily_updater/parliament/: extract.py  votes.py
src/daily_updater/parliament/initiatives/: extract.py
src/daily_updater/parliament/legislatures/: extract.py
src/elections/: extract.py
src/parliament/: common.py  constants.py  extract.py  model.py  parliament_model.py  votes.py
src/parliament/agenda/: mapper.py  router.py
src/parliament/deputies/: mapper.py  model.py  router.py
src/parliament/initiatives/: common.py  extract.py  initiative_model.py  initiative_router.py  initiative_service.py  votes.py
src/parliament/legislature/: extract.py
src/parliament/legislatures/: extract.py
src/parliament/mappers/: agenda.py  legislature.py
src/parliament/models/: agenda.py  legislature.py
src/parliament/routers/: agenda.py
tests/: test_extract.py
tests/app/parliament/agenda/: router_agenda_test.py
