[tool.poetry]
name = "portuguese_politics"
version = "0.1.0"
description = "Extract information from different sources regarding Portuguese Politics."
authors = ["Luis Silva <luisiul359@gmail.com>"]
packages = [ 
    { include = "elections", from = "src" }, 
    { include = "app", from = "src" },
    { include = "daily_updater", from = "src" } 
]

[tool.poetry.dependencies]
python = ">=3.9.13,<4"
requests = "~2.25.1"
pandas = "~1.1.5"
ipykernel = "~5.5.6"
tqdm = "~4.62.3"
fastapi = "~0.78"
uvicorn = {version = "~0.15.0", extras = ["standard"]}
gunicorn = "20.1.0"
azure-cosmos = "^4.2.0"
azure-storage-blob = "^12.12.0"
tzlocal = "^2.1"
apscheduler = "^3.9.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
