[tool.poetry]
name = "portuguese_politics"
version = "0.1.1"
description = "Extract information from different sources regarding Portuguese Politics."
authors = ["Luis Silva <luisiul359@gmail.com>"]
packages = [ 
    { include = "elections", from = "src" }, 
    { include = "parliament", from = "src" }, 
    { include = "app", from = "src" },
    { include = "daily_updater", from = "src" } 
]

[tool.poetry.dependencies]
python = "3.10.4"
requests = "~2.31"
pandas = "~2.0"
ipykernel = "~6.24"
tqdm = "~4.65"
fastapi = "~0.100"
uvicorn = {version = "~0.22", extras = ["standard"]}
gunicorn = "~20.1"
azure-cosmos = "^4.4"
azure-storage-blob = "^12.17"
tzlocal = "^2.1"
apscheduler = "~3.10"
python-dotenv = "~1.0"
email-validator = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "~7.4"
pytest-cov = "~4.1"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
