[tool.poetry]
name = "portuguese_politics"
version = "0.1.2"
description = "Extract information from different sources regarding Portuguese Politics."
authors = ["Luis Silva <luisiul359@gmail.com>"]
packages = [ 
    { include = "elections", from = "src" }, 
    { include = "parliament", from = "src" }, 
    { include = "app", from = "src" },
    { include = "daily_updater", from = "src" } 
]

[tool.poetry.dependencies]
python = "~3.11"   
requests = "~2.31"
pandas = "~2.2"
ipykernel = "~6.29"
tqdm = "~4.66"
fastapi = "~0.110"
uvicorn = {version = "~0.29", extras = ["standard"]}
gunicorn = "~22.0"
azure-cosmos = "^4.6"
azure-storage-blob = "^12.19"
tzlocal = "^5.2"
apscheduler = "~3.10"
python-dotenv = "~1.0"
email-validator = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "~8.1"
pytest-cov = "~5.0"
black = "^24.4.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
